--- a/index.html
+++ b/index.html
@@ -14,26 +14,40 @@
 
 <body>
 
-  Reliable, efficient delivery
-  Powered by Technology
+  <header>
+    <h2>Reliable, efficient delivery</h2>
+    <h1>Powered by Technology</h1>
+    <p>
+      Our Artificial Intelligence powered tools use millions of project data points
+      to ensure that your project is successful
+    </p>
+  </header>
 
-  Our Artificial Intelligence powered tools use millions of project data points
-  to ensure that your project is successful
+  <main>
+    <article class="card">
+      <h3>Supervisor</h3>
+      <p>Monitors activity to identify project roadblocks</p>`
+      <img src="images/icon-supervisor.svg" alt="">
+    </article>
 
-  Supervisor
-  Monitors activity to identify project roadblocks
+    <article class="card">
+      <h3>Team Builder</h3>
+      <p>Scans our talent network to create the optimal team for your project</p>
+      <img src="images/icon-team-builder.svg" alt="">
+    </article>
 
-  Team Builder
-  Scans our talent network to create the optimal team for your project
+    <article class="card">
+      <h3>Karma</h3>
+      <p>Regularly evaluates our talent to ensure quality</p>
+      <img src="images/icon-karma.svg" alt="">
+    </article>
 
-  Karma
-  Regularly evaluates our talent to ensure quality
-
-  Calculator
-  Uses data from past projects to provide better delivery estimates
-
-
-
+    <article class="card">
+      <h3>Calculator</h3>
+      <p>Uses data from past projects to provide better delivery estimates</p>
+      <img src="images/icon-calculator.svg" alt="">
+    </article>
+  </main>
 </body>
 
 </html>
