--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <main>
     <article class="card">
       <h3>Supervisor</h3>
-      <p>Monitors activity to identify project roadblocks</p>`
+      <p>Monitors activity to identify project roadblocks</p>
       <img src="images/icon-supervisor.svg" alt="">
     </article>
 
