--- a/index.html
+++ b/index.html
@@ -24,25 +24,25 @@
   </header>
 
   <main>
-    <article class="card">
+    <article class="card card-1">
       <h3>Supervisor</h3>
       <p>Monitors activity to identify project roadblocks</p>
       <img src="images/icon-supervisor.svg" alt="">
     </article>
 
-    <article class="card">
+    <article class="card card-2">
       <h3>Team Builder</h3>
       <p>Scans our talent network to create the optimal team for your project</p>
       <img src="images/icon-team-builder.svg" alt="">
     </article>
 
-    <article class="card">
+    <article class="card card-3">
       <h3>Karma</h3>
       <p>Regularly evaluates our talent to ensure quality</p>
       <img src="images/icon-karma.svg" alt="">
     </article>
 
-    <article class="card">
+    <article class="card card-4">
       <h3>Calculator</h3>
       <p>Uses data from past projects to provide better delivery estimates</p>
       <img src="images/icon-calculator.svg" alt="">
